--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
-  background-color: #282c34;
+  background-color: #1e1f23;
   color: white;
 }
 
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  font-weight: 400;
+  font-weight: 300;
   margin: 0;
 }
 
@@ -31,25 +31,7 @@ a:hover {
   padding: 20px;
 }
 
-.navbar {
-  background-color: #20232a;
-  padding: 10px;
-}
 
-.navbar a {
-  margin-right: 15px;
-  color: white;
-}
-
-.navbar a:hover {
-  color: #61dafb;
-}
-
-.main-header {
-    margin: auto;
-    padding: 50px;
-    text-align: center;
-}
 
 /*RESET STYLES ACROSS BROWSERS  https://github.com/necolas/normalize.css/blob/master/normalize.css
 */
