--- a/frontend/src/components/DisplayMenu/DisplayMenu.css
+++ b/frontend/src/components/DisplayMenu/DisplayMenu.css
@@ -1,23 +1,29 @@
-.header {
+/* .header {
     background-image: url('/RussianFolkArtBird.jpg');
     background-size: cover;
     background-position: top;
     text-align: center;
     padding: 90px 0;
-    color: white;
-  }
+  } */
+
+  .siteDescription {
+    text-align: center;
+    color: beige;
+    margin-top: 130px;
+}
 
 .menu-container {
     display: grid;
     grid-template-columns: 1fr;
     gap: 28px;
     padding: 25px;
-    margin: 125px 30px;
+    margin: 15px 30px;
   }
   
   .menu-card {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     border: 1px solid #ccc;
     border-radius: 8px;
     overflow: hidden;
@@ -25,6 +31,7 @@
     width: 100%; /* Ensure the card takes up the full width of the container */
     max-width: 600px; /* Limit the maximum width of the card */
     margin: 0 auto; /* Center the card horizontally */
+    height: 100%;
   }
   
   .menu-image {
@@ -34,6 +41,7 @@
   }
   
   .menu-details {
+    flex-grow: 1; /* Allow the details to take up the remaining space */
     padding: 15px; /* Reduce padding for smaller cards */
     line-height: 110%;
   }
@@ -62,7 +70,57 @@
     font-size: .9em;
     color: silver;
   }
+
+  .addToCart {
+    background-color: silver;
+    color: #0e0f0f;
+    width: 30%;
+    height: 38px;
+    align-self: center;
+    border: none;
+    padding: 5px 5px;
+    cursor: pointer;
+    font-size: .9em;
+    border-radius: 4px;
+    margin-top: 8px;
+  }
+
+  .addToCart:hover {
+    background-color: #0e0f0f;
+    color: silver;
+  }
+
+  .addToCart.added {
+    background-color: #4CAF50;
+    color: white;
+  }
   
+  .addToCart:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+  }
+
+  .buttonWrapper {
+    display: flex;
+    justify-content: center;
+    margin-top: auto;
+    padding-bottom: 10px;
+  }
+  
+  .in-cart {
+    font-size: 0.9em;
+    color: #b1afaf;
+    margin-top: 5px;
+    margin-left: 7px;
+  }
+  
+@media (max-width: 767px) {
+    .addToCart {
+        font-size: .6em;
+        font-weight: bold;
+    }
+  }
+
   @media (min-width: 768px) {
     .menu-container {
       grid-template-columns: repeat(2, 1fr); /* Two-column layout on medium to large screens */
@@ -70,6 +128,9 @@
     .header {
       background-position: top;
       padding: 130px 0;
+    }
+    .addToCart {
+        font-size: .7em;
     }
   }
   @media screen and (min-width: 1024px) {
