--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -10,21 +10,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 100px; /* Increase padding to move modal lower */
+  padding-top: 300px; /* Increase padding to move modal lower */
 }
 
 /* Modal content styling */
 .modal-container {
   position: relative;
-  background-color: white;
-  padding: 20px;
+  background-color: rgb(21, 20, 20);
+  padding: 10px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  max-width: 500px; /* Adjust width as needed */
+  max-width: 500px;
   width: 70%;
   margin: 0 auto;
-  z-index: 1000; /* Ensure modal content is above the backdrop */
+  z-index: 1000;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center-align form content */
+  align-items: center;
 }
