--- a/frontend/src/components/CreateReviewModal/CreateReviewModal.css
+++ b/frontend/src/components/CreateReviewModal/CreateReviewModal.css
@@ -1,15 +1,16 @@
 .review-modal {
     max-width: 600px;
     width: 100%;
+    height: 100%;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: none;
     border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
   }
   
   .review-modal h2 {
-    color: black;
+    color: silver;
     text-align: center;
     margin-bottom: 20px;
   }
