--- a/frontend/src/components/DisplayMenu/DisplayMenu.css
+++ b/frontend/src/components/DisplayMenu/DisplayMenu.css
@@ -6,7 +6,7 @@
     padding: 90px 0;
   } */
 
-  .siteDescription {
+.siteDescription {
     text-align: center;
     color: beige;
     margin-top: 130px;
@@ -61,7 +61,7 @@
     font-size: 1.5em;
   }
 
-  .quantity {
+  .units {
     color: silver;
     font-size: .9em;
   }
@@ -111,13 +111,14 @@
     font-size: 0.9em;
     color: #29a90c;
     margin-top: 5px;
-    margin-left: 7px;
+    margin-left: 14px;
   }
 
   .create-review {
     color: green;
     margin-right: 5px;
     cursor: pointer;
+    font-size: 1.4em;
   }
 
   .rating {
@@ -133,6 +134,23 @@
     .addToCart {
         font-size: .6em;
         font-weight: bold;
+    }
+    .menu-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 2px;
+        padding: 8px;
+        margin: 10px 10px;
+        margin-right: -8px;
+        margin-left: 34px;
+      }
+      
+      .menu-card {
+        width: 100%;
+        height: 90%;
+      }
+      .siteDescription {
+        margin-left: 34px;
     }
   }
 
