--- a/frontend/src/components/Checkout/Checkout.css
+++ b/frontend/src/components/Checkout/Checkout.css
@@ -21,11 +21,35 @@
 }
 
 .cart-item {
-  margin-top: 8px;
+  display: flex;
+  flex-direction: row;
+  gap: 4vw;
+  padding: 10px;
+}
+
+.col1 {
+    width: 90%;
+    height: 100%;
+    /* justify-content: left; */
+}
+
+.col2 {
+    width: 30%;
+    height: 100%;
+    justify-content: right;
+}
+
+@media (max-width: 900px) {
+  .col1 {
+    width: 100%;
+  }
+  .col2 {
+    width: 50%;
+  }
 }
 
 .total {
-  margin-top: 10px;
+  margin-top: 18px;
   font-weight: 500;
 }
 
