--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 18px;
 }
 
 .footer-info h2 {
@@ -45,5 +46,7 @@
 }
 
 .footer-logo {
-  max-width: 500px;
+  max-width: 350px;
+  border-radius: 8px;
+
 }
