added seeds and minor login changes

--- a/frontend/src/components/Cart/CartModal.css
+++ b/frontend/src/components/Cart/CartModal.css
@@ -137,6 +137,7 @@
 .cart-modal-footer button {
     border-radius: 6px;
     margin-left: 2px;
+    padding: 2px;
     background-color: rgb(202, 197, 197);
 }
 
