--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -1,18 +1,3 @@
-/* Modal backdrop styling */
-.modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; /* Ensure full height for backdrop */
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start; /* Align the modal a bit lower */
-  padding-top: 0px;
-}
-
 /* Modal content styling */
 .modal-container-signup {
   position: relative;
@@ -20,9 +5,9 @@
   padding: 15px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  height: 110% !important;
+  height: 90% !important;
   width: 100%;
-  margin: 100px auto 0; /* Add top margin for vertical adjustment */
+  margin: 150px auto 0; /* Add top margin for vertical adjustment */
   z-index: 1000; /* Ensure modal content is above the backdrop */
   display: flex;
   flex-direction: column;
@@ -32,12 +17,17 @@
 /* Signup box styling */
 .signup-box {
   background-color: rgb(91, 91, 91);
-  padding: 14px;
+  padding: 15px;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 420px;
   width: 100%; /* Ensure signup box takes full width */
+}
+
+.centered-text {
+    text-align: center;
+    font-size: 1.2rem;
 }
 
 /* Form styling */
@@ -98,13 +88,4 @@ button[type="submit"]:disabled {
 p {
   color: red;
   font-weight: bold;
-}
-
-/* Ensure text remains black in dark mode */
-body.dark-mode .signup-box,
-body.dark-mode .signup-form,
-body.dark-mode .signup-box label,
-body.dark-mode .signup-box input,
-body.dark-mode .signup-box p {
-  color: black;
 }
