--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -21,6 +21,7 @@
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 900px;
+  height: 90%;
   width: 100%;
   margin: 0 auto;
   z-index: 1000;
