--- a/frontend/src/components/Cart/CartModal.css
+++ b/frontend/src/components/Cart/CartModal.css
@@ -19,6 +19,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 80% !important;
     max-width: 750px !important;
+    height: 65% !important;
     max-height: calc(90vh - 100px); /* Adjust this value as needed */
     z-index: 1000;
     display: flex;
