--- a/frontend/src/components/Checkout/Checkout.css
+++ b/frontend/src/components/Checkout/Checkout.css
@@ -20,24 +20,42 @@
   margin-bottom: 5px;
 }
 
-.cart-item {
-  display: flex;
-  flex-direction: row;
-  gap: 4vw;
-  padding: 10px;
-}
-
-.col1 {
-    width: 90%;
-    height: 100%;
-    /* justify-content: left; */
-}
-
-.col2 {
-    width: 30%;
-    height: 100%;
-    justify-content: right;
-}
+.order-summary {
+    width: 100%;
+    max-width: 800px;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .cart-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid silver;
+    width: 100%;
+  }
+  
+  .col1 {
+    flex: 2;
+    text-align: left;
+  }
+  
+  .col2 {
+    flex: 1;
+    text-align: center;
+  }
+  
+  .col3 {
+    flex: 1;
+    text-align: right;
+  }
+  
+  .total {
+    margin-top: 18px;
+    font-weight: 500;
+    text-align: right;
+  }
 
 @media (max-width: 900px) {
   .col1 {
@@ -83,7 +101,7 @@
 
 .update {
     width: 480px !important;
-    color:brown !important;
+    color: rgb(6, 224, 6) !important;
 }
 
 .checkout-page button:disabled {
