--- a/frontend/src/components/ReviewsModal/ReviewsModal.css
+++ b/frontend/src/components/ReviewsModal/ReviewsModal.css
@@ -60,12 +60,12 @@
     background: none;
     border: none;
     cursor: pointer;
-    color: #656464;
+    color: #cdcaca;
   }
 
   .save {
-    border: 1px solid #7a7979 !important;
-    color: #7a7979 !important;
+    border: 1px solid #c1bebe !important;
+    color: #dad5d5 !important;
     border-radius: 5px;
   }
   
