--- a/frontend/src/components/Cart/CartModal.css
+++ b/frontend/src/components/Cart/CartModal.css
@@ -20,11 +20,11 @@
     width: 80% !important;
     max-width: 750px !important;
     height: 65% !important;
-    max-height: calc(90vh - 100px); /* Adjust this value as needed */
+    max-height: calc(90vh - 100px);
     z-index: 1000;
     display: flex;
     flex-direction: column;
-    overflow-y: auto; /* Enable vertical scrolling */
+    overflow-y: auto;
 
     /* Webkit scrollbar styles */
     &::-webkit-scrollbar {
