--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -4,12 +4,12 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%; /* Ensure full height for backdrop */
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 999;
     display: flex;
     justify-content: center;
-    align-items: flex-start; /* Align the modal a bit lower */
+    align-items: flex-start;
     padding-top: 0px;
   }
   
@@ -22,11 +22,11 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     height: 110% !important;
     width: 100%;
-    margin: 100px auto 0; /* Add top margin for vertical adjustment */
-    z-index: 1000; /* Ensure modal content is above the backdrop */
+    margin: 100px auto 0;
+    z-index: 1000;
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center-align form content */
+    align-items: center;
   }
 
 
@@ -38,7 +38,7 @@
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 290px;
-  width: 100%; /* Ensure login box takes full width */
+  width: 100%;
   color: beige;
 }
 
@@ -48,26 +48,26 @@
   background-color: rgb(91, 91, 91) !important;
   border-radius: 8px;
   padding: 20px;
-  width: 75%; /* Ensure form takes full width */
+  width: 75%;
   background-color: #f9f9f9;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center-align form content */
+  align-items: center;
   margin-left: 15px;
   margin-top: 10px;
 }
 
 /* Label styling */
 .login-form label {
-  width: 100%; /* Ensure labels take full width */
+  width: 100%; 
   margin-bottom: 10px;
   font-weight: 400;
-  text-align: left; /* Left-align labels */
+  text-align: left;
 }
 
 /* Input field styling */
 .login-form input {
-  width: 100%; /* Adjust width to 100% */
+  width: 100%;
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
