--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -40,17 +40,26 @@
 }
 
 .owners {
-    width: 200px;
+    width: 172px;
     height: auto;
-    border-radius: 6px;
+    border-radius: 38px;
     margin-left: 250px;
+    margin-right: -80px;
+    overflow: hidden;
+    object-fit: cover;
+    transition: transform 0.5s;
 }
+
+.owners:hover img {
+    transform: scale(1.5);
+  }
 
 .cart-icon {
   font-size: 1.4rem;
   color: beige;
   border-radius: 7px;
   padding: 4px;
+  margin-left: 20px;
   background-color: black;
   cursor: pointer;
 }
@@ -125,10 +134,6 @@
   cursor: pointer;
 }
 
-.dropdown-item:hover {
-  background-color: #f1f1f1;
-}
-
 .profile-dropdown {
   position: absolute;
   top: 100%;
@@ -155,11 +160,12 @@
   border: none;
   text-align: left;
   width: 100%;
-  /* cursor: pointer; */
+  cursor: pointer;
 }
 
 .profile-dropdown-item:hover {
-  background-color: #fefbfb;
+  color: white !important;
+  background-color: black;
 }
 
 .text-link {
