--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -1,31 +1,29 @@
 /* Modal backdrop styling */
 .modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; 
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 300px;
-}
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; 
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+  }
 
-/* Modal content styling */
-.modal-container {
-  position: relative;
-  background-color: rgb(21, 20, 20);
-  padding: 10px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  max-width: 900px;
-  height: 90%;
-  width: 100%;
-  margin: 0 auto;
-  z-index: 1000;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+  /* Modal content styling */
+  .modal-container {
+    position: relative;
+    background-color: rgb(21, 20, 20);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 900px;
+    width: 100%;
+    margin-top: 100px;
+    z-index: 1001;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
